# csgochanger

./: .editorconfig  .gitignore  SkinChanger.sln
CSGOSimple/: CCSCustomMaterialSwapManager.cpp  CCSCustomMaterialSwapManager.h  CCSWeaponVisualsDataProcessor.h  CCStrike15ItemSchema.cpp  CCStrike15ItemSchema.h  CClientState.cpp  CClientState.h  CEconWearable.cpp  CEconWearable.h  CEngineSoundClient.h  CGameUI.h  CMakeLists.txt  CMaterialReference.cpp  CMaterialReference.h  CMemAlloc.h  CPlayerResource.cpp  CPlayerResource.hpp  CSGOSimple.common.settings  CSGOSimple.vcxproj  CSGOSimple.vcxproj.filters  CSGOStructs.cpp  CSGOStructs.hpp  CSSteamAPIContext.h  CSteamNetworkingUtils.h  CUIEngineSource2.h  CUtlRBTree.cpp  CUtlRBTree.hpp  C_EconItemView.cpp  C_EconItemView.h  ClientState.cpp  CompileTime.h  Config.cpp  Config.h  Crates.cpp  Crates.h  CustomWinAPI.cpp  CustomWinAPI.h  Debug_ExceptionHandler.cpp  EconEntityListener.cpp  EconEntityListener.h  (+109 more)
CSGOSimple/ImGUI/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
CSGOSimple/ImGUI/DX9/: font_resource.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h
CSGOSimple/ImGUI/old/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
CSGOSimple/ImGUI/win32/: imgui_impl_win32.cpp
CSGOSimple/ManualSEH/: VEHtoSEH.cpp  VEHtoSEH.h
CSGOSimple/Protobuffs/: ProtoParse.h  ProtobuffMessages.h  inventory_changer.h  profile_info_changer.h
CSGOSimple/SourceEngine/: CGlobalVarsBase.hpp  CHandle.hpp  CInput.cpp  CInput.hpp  CRC.cpp  CRC.hpp  ClientClass.hpp  Color.hpp  Convar.cpp  Convar.hpp  Definitions.hpp  IAppSystem.hpp  IBaseClientDll.hpp  IClientEntity.hpp  IClientEntityList.hpp  IClientMode.hpp  IClientNetworkable.hpp  IClientRenderable.hpp  IConVar.hpp  ICvar.hpp  IEngineTrace.hpp  ISurface.hpp  IVEngineClient.hpp  PlayerInfo.hpp  QAngle.hpp  Recv.hpp  SDK.cpp  SDK.hpp  UtlMemory.hpp  UtlString.cpp  UtlString.hpp  UtlVector.hpp  VMatrix.cpp  VMatrix.hpp  Vector.cpp  Vector.hpp  Vector2D.cpp  Vector2D.hpp  Vector4D.cpp  Vector4D.hpp
CSGOSimple/curl/: curlver.h  libcurl.lib
CSGOSimple/json/: allocator.h  json_reader.cpp  json_value.cpp  json_writer.cpp  value.h
CSGOSimple/minhook/include/: MinHook.h
CSGOSimple/minhook/src/: buffer.c  hook.c  trampoline.c
CSGOSimple/minhook/src/hde/: hde32.c  table32.h
